--- a/index.html
+++ b/index.html
@@ -168,6 +168,16 @@
     var countryList;
     var aircraftList;
     var table;
+
+    /**
+     * Filter here
+     */
+    var typeDescriptionList = [
+        'Bombardier BD-100-1A10 Challenger 300',
+        'Bombardier BD-100-1A10 Challenger 350'
+    ];
+
+
     getCountryList();
 
     function getCountryList() {
@@ -212,7 +222,11 @@
                 async: false,
                 dataType: 'json',
                 success: function (result) {
-                    data = data.concat(result['aircraft']);
+                    for (let j = 0; j < result['aircraft'].length; j++) {
+                        if (typeDescriptionList.indexOf(result['aircraft'][j]['typeDescription']) !== -1) {
+                            data.push(result['aircraft'][j]);
+                        }
+                    }
                 }
             });
         }
@@ -467,8 +481,7 @@
 
     function drawDataTable() {
         table = $('#aircraft_list').DataTable({
-            dom: 'tpl',
-            ordering: false
+            dom: 'tpl'
         });
     }
 </script>
